@@ -4617,6 +4617,8 @@ v0.33.20        10-Feb-2002
 		Added support for ext3 filesystem in diskspace check.
 		Fixed lharc archives return code to LHA.
 		Changed mkprod.awk script to support Debian Woody.
+		The aka2str function now onmits the @ if there is no domain
+		information.
 
 	clcomm.a
 		Added counter for mailer TCP/IP sessions.
